# MyGraphicLibrary

./: CMakeLists.txt  abstract_classes.cpp  abstract_classes.hpp  app.cpp  app.hpp  application.cpp  application.hpp  application.hpp.gch  basics.cpp  basics.hpp  cnavas.cpp  cnavas.hpp  color_utilities.cpp  color_utilities.hpp  engine.cpp  event.cpp  event.hpp  graphic_library.cpp  graphic_library.hpp  graphics.cpp  graphics.hpp  helper.cpp  input_box.cpp  input_box.hpp  lib_palitra.cpp  lib_palitra.hpp  main  main.cpp  menu.cpp  menu.hpp  palette.cpp  palette.hpp  research.cpp  research.h  research.hpp  scrollbar.cpp  sfml-app  sfml_define.cpp  sfml_define.hpp  sorts.h  (+5 more)
plugins/: api.hpp  my_plagin.cpp  my_plagin.hpp  try.cpp
